# dotfiles-loader

./: Cargo.toml  README.md  install
.devcontainer/: devcontainer.json
.github/: dependabot.yml  security.md
.github/workflows/: ci.yml  release-assets.yml
.github/workflows/setup/: action.yml
docker/: dockerfile
